style.css
body {
	min-width: 550px;
	margin: 0;
}

body > * {
	font-weight: 200;
	font-family: "helvetica neue", arial, sans-serif;
	letter-spacing: 0.05em;
	font-size: 16px;
}

h1 {
	font-size: 40px;
	font-weight: 100;
	margin: 0;
	line-height: 2em;
}

#page {
	width: 100%;
	height: 100%;
	text-align: center;
}

#board {
	display: inline-block;
	vertical-align: bottom;
}

.tile {
	float: left;
	width: 90px;
	height: 90px;
	border: 10px solid #999;
	background-color: #FFF;
	margin: 10px;
	cursor: pointer;
	border-radius: 1000px;
}

.tile.one {
	background-color: #21D330;
}

.tile.two {	
	background-color: #FF8822;
}

.tile.faux {
	width: 45px;
	height: 45px;
}

.tile.faux {
	width: 45px;
	height: 45px;
}

.tile:hover {
	border-color: #444;
}

#board.one .tile:hover {
	border-color: #21D330;
}

#board.two .tile:hover {
	border-color: #FF8822;
}

#board .tile.one:hover,
#board .tile.two:hover {
	border-color: #444;
}

.tile.faux:hover {
	cursor: default;
}

.nth-tile {
	clear: both;
}

#info {
	clear: both;
	font-size: 24px;
	display: inline-block;
	vertical-align: bottom;
	margin: 0 40px;
	width: 470px;
}

.player {
	display: inline-block;
	width: 50%;
	text-align: center;
}

.player .name {
	line-height: 80px;
	float: left;
	display: inline-block;
	margin-left: 10px;
}

.player.one {
	float: left;
}

.player.two {
	float: right;
}

#overlay-bg {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background-color: rgba(0,0,0,0.3);
	z-index: 1;
	display: none;
	cursor: pointer;
}

#overlay-bg.show {
	display: inline-block;
}

#message {
	color: #000;
	background-color: #FFF;
	border-radius: 16px;
	padding: 8px 18px;
	font-weight: 200;
	top: 12%;
	position: absolute;
	z-index: 2;
	display: none;
	width: 400px;
	left: 50%;
	margin-left: -218px;
}

#message.show {
	display: inline-block;
}

#message .title {
	line-height: 1.5em;
	font-size: 40px;
}

.new-game {
	display: inline-block;
	cursor: pointer;
}

#message .text {
	display: inline-block;
	line-height: 80px;
	font-size: 32px;
	color: #999
}

.button.tile.faux {
	width: 45px;
	height: 45px;
	color: #FFF;
	text-align: center;
	line-height: 45px;
	font-size: 40px;
	font-weight: 500;
	display: inline-block;
	cursor: pointer;
}

.new-game:hover * {
	color: #444;
	border-color: #444;
}

